--- a/index.html
+++ b/index.html
@@ -1,12 +1,148 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="main-header">
+      <nav class="navigation">
+        <a class="logo-link">
+          <img class="logo-img" src="./images/logo.svg" width="140" height="70" alt="Логотип города Седона.">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Лайк</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-index">
+      <h1 class="visually-hidden">Информация о городе Седона</h1>
+      <section class="welcome">
+        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+        <img class="welcome-img" src="./images/welcome.svg" alt="Добро пожаловать в город Седона." width="458"
+          height="352">
+      </section>
+      <section class="reasons">
+        <h2 class="visually-hidden">О Седоне</h2>
+        <p class="reasons-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="reasons-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="advantages-img" src="./images/advantages-1.jpg" width="800" height="384"
+              alt="Седона-настоящий городок.">
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img class="advantages-img" src="./images/advantages-2.jpg" width="800" height="384" alt="Мост дьявола.">
+          </li>
+        </ul>
+      </section>
+      <section class="hint">
+        <h2 class="visually-hidden">Рекомендации</h2>
+        <ul class="hint-list">
+          <li class="hint-item">
+            <h3 class="hint-title">Жильё</h3>
+            <p class="hint-description">Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="hint-item">
+            <h3 class="hint-title">Еда</h3>
+            <p class="hint-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="hint-item">
+            <h3 class="hint-title">Сувениры</h3>
+            <p class="hint-description">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="hotel-search">
+        <h2 class="visually-hidden">Поиск гостиницы</h2>
+        <p class="hotel-search-title">Заинтересовались?</p>
+        <p class="hotel-search-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
+          гостиниц в Седоне</p>
+        <a class="hotel-search-link" href="#">Поиск гостиницы в Седоне</a>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <section class="newsletter">
+        <h2 class="visually-hidden">Рассылка</h2>
+        <p class="newsletter-title">Подпишитесь на рассылку</p>
+        <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
+          <label class="visually-hidden" for="newsletter-email">Email</label>
+          <input class="newsletter-field" type="email" placeholder="Ваш e-mail" name="newsletter-email"
+            id="newsletter-email" required>
+          <button class="button newsletter-button" type="submit">Подписаться</button>
+        </form>
+      </section>
+      <section class="contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <ul class="contacts-list">
+          <li class="contacts-item">
+            <a class="contacts-link" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВК</span>
+            </a>
+          </li>
+          <li class="contacts-item">
+            <a class="contacts-link" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграмм</span>
+            </a>
+          </li>
+          <li class="contacts-item">
+            <a class="contacts-link" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+        <a class="contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a class="footer-logo-link" href="https://htmlacademy.ru/">
+          <img class="footer-logo-img" src="./images/footer-logo.svg" width="114.9" height="32.9"
+            alt="Логотип HTML-academy.">
+        </a>
+      </section>
+    </footer>
   </body>
+
 </html>
