--- a/index.html
+++ b/index.html
@@ -4,141 +4,166 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
 
-  <body>
-    <header class="page-header">
-      <nav class="main-nav">
-        <a href="#" class="logo-link">
-          <img src="#" alt="логотип города Седона" class="logo-img">
-        </a>
-        <ul class="main-menu">
-          <li class="menu-item">
-            <a href="#" class="menu-link">Главная</a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link">О седоне</a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="second-menu">
-          <li class="menu-item">
-            <a href="#" class="menu-link">
-              <span class="visually-hidden">Поиск</span>
-            </a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link">
-              <span class="visually-hidden">Лайк</span>
-              <span class="likes-number">Лайк</span>
-            </a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link">Хочу сюда!</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <h1 class="visually-hidden">Информация о городе Седона</h1>
-      <section class="wellcome">
-        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <img src="#" alt="Добро пожаловать" class="wellcome-img1">
-        <img src="#" alt="в великолепный" class="wellcome-img2">
-        <img src="#" alt="город Седона" class="wellcome-img3">
-      </section>
-      <section class="description">
-        <h2 class="visually-hidden">О Седоне</h2>
-        <p class="main-description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p class="description-advantages">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-      </section>
-      <section class="advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p>Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          </li>
-        </ul>
-      </section>
-      <section class="recommendations">
-        <h2 class="visually-hidden">Рекомендации</h2>
-        <ul class="recommendation-list">
-          <li class="recommendation-item">
-            <h3 class="recommentadion-title">Жильё</h3>
-            <p>Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="recommendation-item">
-            <h3 class="recommentadion-title">Еда</h3>
-            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="recommendation-item">
-            <h3 class="recommentadion-title">Сувениры</h3>
-            <p>Не только китайского, но и настоящего местного производства!</p>
-          </li>
-        </ul>
-      </section>
-      <section class="hotel-search">
-        <h2 class="visually-hidden">Поиск гостиницы</h2>
-        <p class="main-hotel-search">Заинтересовались?</p>
-        <p class="second-hotel-search">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц
-          в Седоне</p>
-        <a href="#" class="hotel-search-link">Поиск гостиницы в Седоне</a>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <section class="mailing">
-        <h2 class="visually-hidden">Подпишись на рассылку</h2>
-        <p class="main-mailing">Подпишитесь на рассылку</p>
-        <p class="second-mailing">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form action="https://echo.htmlacademy.ru" class="mailing-form" method="post">
-          <input type="email" class="field" placeholder="Ваш e-mail" name="mailing" id="mailing" required>
-          <button class="button mailing-button" type="submit">Подписаться</button>
-        </form>
-      </section>
-      <section class="contacts">
-        <h2 class="visually-hidden">Контакты</h2>
-        <nav class="footer-nav">
+  <body class="page-body">
+    <div class="page-container">
+      <header class="main-header">
+        <nav class="navigation">
+          <a class="logo-link">
+            <img class="logo-img" src="./images/logo.svg" width="140" height="70" alt="Логотип города Седона.">
+          </a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О Cедоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span class="visually-hidden">Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span class="visually-hidden">Лайк</span>
+                <span class="visually-hidden">12</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-batton" href="#">Хочу сюда!</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main-index">
+        <h1 class="visually-hidden">Информация о городе Седона</h1>
+        <section class="welcome">
+          <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+          <img class="welcome-img" src="./images/welcome.svg" alt="Добро пожаловать в город Седона." width="458"
+            height="352">
+        </section>
+        <section class="reasons">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <p class="reasons-title">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="reasons-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <ul class="advantages-list">
+            <li class="advantages-item  advantages-item--special">
+              <div class="advantages-container">
+                <h3 class="advantages-title">Настоящий городок</h3>
+                <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
+              <div class="advantages-img-container">
+                <img class="advantages-img" src="./images/photo-1.jpg" width="800" height="384"
+                  alt="Седона-настоящий городок.">
+              </div>
+            </li>
+            <li class="advantages-item">
+              <div class="advantages-container">
+                <h3 class="advantages-title">Небольшая площадь</h3>
+                <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+              </div>
+            </li>
+            <li class="advantages-item advantages-item--oliva">
+              <div class="advantages-container">
+                <h3 class="advantages-title">Красивая дорога</h3>
+                <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </div>
+            </li>
+            <li class="advantages-item">
+              <div class="advantages-container">
+                <h3 class="advantages-title">Мало туристов</h3>
+                <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+              </div>
+            </li>
+            <li class="advantages-item advantages-item--special">
+              <div class="advantages-img-container">
+                <img class="advantages-img" src="./images/photo-2.jpg" width="800" height="384" alt="Мост дьявола.">
+              </div>
+              <div class="advantages-container">
+                <h3 class="advantages-title">Там есть мост дьявола</h3>
+                <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+        <section class="hint">
+          <h2 class="visually-hidden">Рекомендации</h2>
+          <ul class="hint-list">
+            <li class="hint-item">
+              <div class="hint-container">
+                <h3 class="hint-title">Жильё</h3>
+                <p class="hint-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </div>
+            </li>
+            <li class="hint-item hint-item-oliva">
+              <div class="hint-container">
+                <h3 class="hint-title">Еда</h3>
+                <p class="hint-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </div>
+            </li>
+            <li class="hint-item">
+              <div class="hint-container">
+                <h3 class="hint-title">Сувениры</h3>
+                <p class="hint-description">Не только китайского, но и настоящего местного производства!</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+        <section class="hotel-search">
+          <h2 class="visually-hidden">Поиск гостиницы</h2>
+          <p class="hotel-search-title">Заинтересовались?</p>
+          <p class="hotel-search-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
+            гостиниц в Седоне</p>
+          <a class="hotel-search-link" href="#">Поиск гостиницы в Седоне</a>
+        </section>
+      </main>
+      <footer class="page-footer">
+        <section class="newsletter">
+          <h2 class="visually-hidden">Рассылка</h2>
+            <p class="newsletter-title">Подпишитесь на рассылку</p>
+            <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+            <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
+              <label class="visually-hidden" for="newsletter-email">Email</label>
+              <input class="newsletter-field" type="email" placeholder="Ваш e-mail" name="newsletter-email"
+                id="newsletter-email" required>
+              <button class="button newsletter-button" type="submit">Подписаться</button>
+            </form>
+        </section>
+        <section class="contacts">
+          <h2 class="visually-hidden">Контакты</h2>
           <ul class="contacts-list">
             <li class="contacts-item">
-              <a href="#" class="contacts-link">
+              <a class="contacts-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">ВК</span>
               </a>
             </li>
             <li class="contacts-item">
-              <a href="#" class="contacts-link">
+              <a class="contacts-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Телеграмм</span>
               </a>
             </li>
             <li class="contacts-item">
-              <a href="#" class="contacts-link">Ютуб</a>
+              <a class="contacts-link" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
             </li>
           </ul>
-        </nav>
-        <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a href="#" class="footer-logo-link">
-          <img src="#" alt="логотип HTML-academy" class="logo-img">
-        </a>
-      </section>
-    </footer>
+          <a class="contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          <a class="footer-logo-link" href="https://htmlacademy.ru/">
+            <img class="footer-logo-img" src="./images/footer-Logo.svg" width="114.9" height="32.9"
+              alt="Логотип HTML-academy.">
+          </a>
+        </section>
+      </footer>
+    </div>
   </body>
 
 </html>
