--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <a class="navigation-link  navigation-link-index navigation-link-current">Главная</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link">О Cедоне</a>
+              <a class="navigation-link" href="#">О Cедоне</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
@@ -29,18 +29,18 @@
           </ul>
           <ul class="navigation-list navigation-user">
             <li class="navigation-user-item">
-              <a class="navigation-link-search">
+              <a class="navigation-link-search" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
             <li class="navigation-user-item">
-              <a class="navigation-link-like">
+              <a class="navigation-link-like" href="#">
                 <span class="visually-hidden">Лайк</span>
                 <span class="likes-number">12</span>
               </a>
             </li>
             <li class="navigation-user-item">
-              <a class="navigation-link navigation-link-button">Хочу сюда!</a>
+              <a class="navigation-link navigation-link-button" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
@@ -124,11 +124,7 @@
           <p class="hotel-search-title">Заинтересовались?</p>
           <p class="hotel-search-description">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие
             предложения гостиниц в Седоне</p>
-<<<<<<< HEAD
           <a class="hotel-search-link" href="#">Поиск гостиницы в Седоне</a>
-=======
-          <a class="hotel-search-link">Поиск гостиницы в Седоне</a>
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
         </section>
       </main>
       <footer class="page-footer">
@@ -208,11 +204,7 @@
           </a>
         </section>
       </footer>
-<<<<<<< HEAD
       <div class="modal-container modal--close">
-=======
-      <div class="modal-container">
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
         <div class="modal modal-booking">
           <button class="modal-close-button">
             <span class="visually-hidden">Закрыть</span>
