--- a/catalog.html
+++ b/catalog.html
@@ -18,42 +18,29 @@
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
-<<<<<<< HEAD
-              <a class="navigation-link" href="index.html">Главная</a>
-=======
-              <a class="navigation-link">Главная</a>
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
+              <a class="navigation-link  navigation-link-index navigation-link-current">Главная</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link">О Cедоне</a>
+              <a class="navigation-link" href="#">О Cедоне</a>
             </li>
             <li class="navigation-item">
-<<<<<<< HEAD
-              <a class="navigation-link navigation-link-hotels navigation-link-current">Гостиницы</a>
-=======
-              <a class="navigation-link navigation-link-hotels navigation-link-current"
-                href="catalog.html">Гостиницы</a>
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
             <li class="navigation-user-item">
-              <a class="navigation-link-search">
+              <a class="navigation-link-search" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
             <li class="navigation-user-item">
-              <a class="navigation-link-like">
+              <a class="navigation-link-like" href="#">
                 <span class="visually-hidden">Лайк</span>
                 <span class="likes-number">12</span>
               </a>
             </li>
             <li class="navigation-user-item">
-<<<<<<< HEAD
               <a class="navigation-link navigation-link-button" href="#">Хочу сюда!</a>
-=======
-              <a class="navigation-link navigation-link-button">Хочу сюда!</a>
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
             </li>
           </ul>
         </nav>
@@ -69,16 +56,12 @@
                 </a>
               </li>
               <li class="breadcrumbs-item">
-<<<<<<< HEAD
                 <a class="breadcrumbs-link-hotels" href="#">Гостиницы</a>
-=======
-                <a class="breadcrumbs-link-hotels">Гостиницы</a>
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
+
               </li>
             </ul>
           </header>
           <section class="catalog-filter">
-<<<<<<< HEAD
             <h2 class="visually-hidden">Фильтр каталога</h2>
             <form class="catalog-filter-form" action="https://echo.htmlacademy.ru" method="get">
               <fieldset class="catalog-filter-group">
@@ -142,89 +125,26 @@
                   <label class="to" for="max-value">до</label>
                   <input class="range-field range-field-to" type="text" placeholder="9000" name="max-value"
                     id="max-value">
-=======
-          <h2 class="visually-hidden">Фильтр каталога</h2>
-          <form class="catalog-filter-form" action="https://echo.htmlacademy.ru" method="get">
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Инфраструктура:</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="swimming-pool" checked>
-                    <span class="control-mark"></span>
-                    <span class="control-label">Бассейн</span>
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="parking-space" checked>
-                    <span class="control-mark"></span>
-                    <span class="control-label">Парковка</span>
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="Wi-Fi">
-                    <span class="control-mark"></span>
-                    <span class="control-label">Wi-Fi</span>
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Тип жилья:</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="radio" value="hotel" name="house-type" checked>
-                    <span class="control-mark"></span>
-                    <span class="control-label">Гостиница</span>
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="radio" value="motel" name="house-type">
-                    <span class="control-mark"></span>
-                    <span class="control-label">Мотель</span>
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="radio" value="apartments" name="house-type">
-                    <span class="control-mark"></span>
-                    <span class="control-label">Апартаменты</span>
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="catalog-filter-group catalog-filter-group-range">
-              <legend class="catalog-filter-title catalog-filter-title-price">Стоимость, ₽:</legend>
-              <div class="range">
-                <label class="from" for="min-value">от</label>
-                <input class="range-field range-field-from" placeholder="0" name="min-value" id="min-value">
-                <label class="to" for="max-value">до</label>
-                <input class="range-field range-field-to" placeholder="9000" name="max-value" id="max-value">
-              </div>
-              <div class="range-scale">
-                <div class="range-bar" style="width: 226px">
-                  <button class="range-toggle toggle-min">
-                    <span class="visually-hidden">Изменить минимальную цену.</span>
-                  </button>
-                  <button class="range-toggle toggle-max">
-                    <span class="visually-hidden">Изменить максимальную цену.</span>
-                  </button>
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
                 </div>
                 <div class="range-scale">
                   <div class="range-bar" style="width: 226px">
-                    <button class="range-toggle toggle-min" type="button">
+                    <button class="range-toggle toggle-min">
                       <span class="visually-hidden">Изменить минимальную цену.</span>
                     </button>
-                    <button class="range-toggle toggle-max" type="button">
+                    <button class="range-toggle toggle-max">
                       <span class="visually-hidden">Изменить максимальную цену.</span>
                     </button>
                   </div>
-                </div>
+                  <div class="range-scale">
+                    <div class="range-bar" style="width: 226px">
+                      <button class="range-toggle toggle-min" type="button">
+                        <span class="visually-hidden">Изменить минимальную цену.</span>
+                      </button>
+                      <button class="range-toggle toggle-max" type="button">
+                        <span class="visually-hidden">Изменить максимальную цену.</span>
+                      </button>
+                    </div>
+                  </div>
               </fieldset>
               <fieldset class="catalog-filter-group-button">
                 <button class="button-on" type="submit">Применить</button>
@@ -242,7 +162,6 @@
             <option value="expensive">Сначала дорогое</option>
           </select>
           <div class="catalog-nav-button-container">
-<<<<<<< HEAD
             <a class="catalog-nav-button catalog-nav-button-tiles button-light" href="#">
               <span class="visually-hidden">Показать карточки</span>
             </a>
@@ -250,15 +169,6 @@
               <span class="visually-hidden">Показать карточку</span>
             </a>
             <a class="catalog-nav-button catalog-nav-button-list" href="#">
-=======
-            <a class="catalog-nav-button catalog-nav-button-tiles button-light">
-              <span class="visually-hidden">Показать карточки</span>
-            </a>
-            <a class="catalog-nav-button catalog-nav-button-card">
-              <span class="visually-hidden">Показать карточку</span>
-            </a>
-            <a class="catalog-nav-button catalog-nav-button-list">
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
               <span class="visually-hidden">Показать список</span>
             </a>
           </div>
@@ -375,13 +285,9 @@
             <li class="contacts-item contacts-item-vk">
               <a class="contacts-link contacts-link-vk" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">ВК</span>
-<<<<<<< HEAD
+
                 <svg class="navigation-icon" aria-hidden="true" focusable="false" width="25" height="15"
                   viewBox="0 0 25 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-=======
-                <svg class="navigation-icon" aria-hidden="true" focusable="false" width="25" height="15" viewBox="0 0 25 15" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
                   <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M24.1164 1.80445C24.2824 1.25845 24.1164 0.856445 23.3214 0.856445H20.6964C20.0284 0.856445 19.7204 1.20345 19.5534 1.58645C19.5534 1.58645 18.2184 4.78245 16.3274 6.85845C15.7154 7.46045 15.4374 7.65145 15.1034 7.65145C14.9364 7.65145 14.6854 7.46045 14.6854 6.91345V1.80445C14.6854 1.14845 14.5014 0.856445 13.9454 0.856445H9.81738C9.40038 0.856445 9.14938 1.16045 9.14938 1.44945C9.14938 2.07045 10.0954 2.21445 10.1924 3.96245V7.76045C10.1924 8.59345 10.0394 8.74444 9.70538 8.74444C8.81538 8.74444 6.65038 5.53345 5.36538 1.85945C5.11638 1.14445 4.86438 0.856445 4.19338 0.856445H1.56638C0.816382 0.856445 0.666382 1.20345 0.666382 1.58645C0.666382 2.26845 1.55638 5.65645 4.81138 10.1374C6.98138 13.1974 10.0364 14.8564 12.8194 14.8564C14.4884 14.8564 14.6944 14.4884 14.6944 13.8534V11.5404C14.6944 10.8034 14.8524 10.6564 15.3814 10.6564C15.7714 10.6564 16.4384 10.8484 17.9964 12.3234C19.7764 14.0724 20.0694 14.8564 21.0714 14.8564H23.6964C24.4464 14.8564 24.8224 14.4884 24.6064 13.7604C24.3684 13.0364 23.5184 11.9854 22.3914 10.7384C21.7794 10.0284 20.8614 9.26345 20.5824 8.88045C20.1934 8.38945 20.3044 8.17044 20.5824 7.73345C20.5824 7.73345 23.7824 3.30745 24.1154 1.80445H24.1164Z" />
                 </svg>
@@ -390,13 +296,9 @@
             <li class="contacts-item contacts-item-telegram">
               <a class="contacts-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Телеграмм</span>
-<<<<<<< HEAD
+
                 <svg class="navigation-icon" aria-hidden="true" focusable="false" width="18" height="16"
                   viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-=======
-                <svg class="navigation-icon" aria-hidden="true" focusable="false" width="18" height="16" viewBox="0 0 18 16" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
                   <path
                     d="M16.785 0.955705L0.840489 7.1042C-0.247661 7.54126 -0.241365 8.14828 0.640845 8.41897L4.73445 9.69597L14.2058 3.72014C14.6537 3.44766 15.0629 3.59424 14.7265 3.89281L7.05283 10.8183H7.05103L7.05283 10.8192L6.77045 15.0387C7.18413 15.0387 7.36669 14.8489 7.59871 14.625L9.58705 12.6915L13.7229 15.7464C14.4855 16.1664 15.0332 15.9506 15.2229 15.0405L17.9379 2.2453C18.2158 1.13107 17.5126 0.626562 16.785 0.955705Z" />
                 </svg>
@@ -405,13 +307,8 @@
             <li class="contacts-item contacts-item-youtube">
               <a class="contacts-link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Ютуб</span>
-<<<<<<< HEAD
                 <svg class="navigation-icon" aria-hidden="true" focusable="false" width="23" height="18"
                   viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-=======
-                <svg class="navigation-icon" aria-hidden="true" focusable="false" width="23" height="18" viewBox="0 0 23 18" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
                   <path
                     d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z" />
                 </svg>
@@ -420,13 +317,8 @@
           </ul>
           <a class="contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           <a class="footer-logo-link" href="https://htmlacademy.ru/">
-<<<<<<< HEAD
             <svg class="footer-logo-icon" aria-hidden="true" focusable="false" width="115" height="34"
               viewBox="0 0 115 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-=======
-            <svg class="footer-logo-icon" aria-hidden="true" focusable="false" width="115" height="34" viewBox="0 0 115 34" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
->>>>>>> 2cfb621da60145b8f849d55cdd1bad968330c19a
               <path d="M0 13.2564V15.8564H2.5V13.2564H0Z" />
               <path
                 d="M11.6 4.85645C10 4.85645 8.8 5.55645 8 6.55645H7.9V0.356445H5.9V15.8564H7.9V10.5564C7.9 8.45645 9.2 6.95645 11.2 6.95645C13 6.95645 14.1 8.35645 14.1 10.1564V15.8564H16.1V9.75644C16.2 6.75644 14.3 4.85645 11.6 4.85645Z" />
