--- a/catalog.html
+++ b/catalog.html
@@ -18,13 +18,13 @@
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link  navigation-link-index navigation-link-current">Главная</a>
+              <a class="navigation-link  navigation-link-index" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О Cедоне</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+              <a class="navigation-link navigation-link-hotels navigation-link-current">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
@@ -145,6 +145,7 @@
                       </button>
                     </div>
                   </div>
+                </div>
               </fieldset>
               <fieldset class="catalog-filter-group-button">
                 <button class="button-on" type="submit">Применить</button>
